--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.orbitsimulator.fragment.SettingsFragment">
-
+    android:layout_marginBottom="10dp"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:padding="16dp"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <LinearLayout
+        android:id="@+id/linear_size"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:id="@+id/handle"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="-30dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/handle_shape"
+            android:clickable="true"
+            android:contentDescription="@string/configuration"
+            android:focusable="true" />
 
         <TextView
             android:id="@+id/tv_tittle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginBottom="@dimen/double_margin"
             android:text="@string/settings"
             android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_geometryData"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/geometry" />
-
-        <NumberPicker
-            android:layout_width="wrap_content"
-            android:layout_height="50dp">
-
-        </NumberPicker>
 
         <TextView
             android:id="@+id/tv_elementData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/default_margin"
             android:text="@string/element" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,28 +57,33 @@
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:padding="10dp"
+                android:layout_marginLeft="@dimen/default_margin"
 
+                android:layout_marginRight="@dimen/double_margin"
+                android:padding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
                 android:id="@+id/colorPickerSlideBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
 
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginLeft="@dimen/default_margin"
+                android:layout_marginTop="@dimen/double_margin"
+                android:layout_marginRight="@dimen/double_margin"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/colorPickerView" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.46" />
+                app:layout_constraintGuide_percent="0.5" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -77,7 +91,7 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/colorPickerView"
+                app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -92,7 +106,6 @@
                     android:id="@+id/tv_size_minimum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
                     android:layout_weight="1"
                     android:text="@string/minimum" />
 
@@ -126,7 +139,6 @@
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </LinearLayout>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
