--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_settings"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
-    android:background="@color/white"
+    android:layout_height="wrap_content"
+    android:background="@color/black"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:minHeight="400dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <LinearLayout
@@ -20,33 +21,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <FrameLayout
+            android:id="@+id/handle_container"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="@android:color/transparent"
+            android:focusable="true"
+            android:clickable="true"
+            android:layout_gravity="center">
+
         <View
             android:id="@+id/handle"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="-30dp"
-            android:layout_marginBottom="0dp"
+            android:layout_width="100dp"
+            android:layout_height="5dp"
             android:background="@drawable/handle_shape"
-            android:clickable="true"
+            android:layout_gravity="center"
+
             android:contentDescription="@string/configuration"
-            android:focusable="true" />
+            android:layout_marginBottom="5dp"/>
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/tv_tittle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/default_margin"
             android:layout_marginTop="@dimen/default_margin"
+            android:layout_marginRight="@dimen/default_margin"
             android:layout_marginBottom="@dimen/double_margin"
             android:text="@string/settings"
+            android:textAlignment="center"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_elementData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/default_margin"
-            android:text="@string/element" />
+            android:layout_marginStart="@dimen/default_margin"
+            android:layout_marginEnd="@dimen/default_margin"
+            android:text="@string/element"
+            android:textColor="@color/white" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -57,26 +73,14 @@
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/default_margin"
 
-                android:layout_marginRight="@dimen/double_margin"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_margin"
                 android:padding="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
-                android:id="@+id/colorPickerSlideBar"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-
-                android:layout_marginLeft="@dimen/default_margin"
-                android:layout_marginTop="@dimen/double_margin"
-                android:layout_marginRight="@dimen/double_margin"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline4"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/colorPickerView" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline4"
@@ -100,14 +104,17 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_weight="1"
-                    android:text="@string/element_size" />
+                    android:text="@string/element_size"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/tv_size_minimum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
                     android:layout_weight="1"
-                    android:text="@string/minimum" />
+                    android:text="@string/minimum"
+                    android:textColor="@color/white" />
 
                 <SeekBar
                     android:id="@+id/seekBar2"
@@ -125,7 +132,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_weight="1"
-                    android:text="@string/maximum" />
+                    android:text="@string/maximum"
+                    android:textColor="@color/white" />
 
                 <SeekBar
                     android:id="@+id/seekBar"
