--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="double_margin">20dp</dimen>
     <dimen name="button_text_size">10sp</dimen>
     <dimen name="margin_End">10dp</dimen>
+    <dimen name="peek_height">100dp</dimen>
 </resources>
