--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -34,9 +34,8 @@
 
     <FrameLayout
         android:id="@+id/fragment_settings"
+        android:layout_width="350dp"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        android:layout_width="match_parent">
-    </FrameLayout>
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"></FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
