Alterações nos controles de cor e refatoração de classes. Classe de cor foi modificada para usar cores em int no padrão Android Color.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_controls">#262626</color>
+    <color name="background_settings">#262626</color>
+
 </resources>
