--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,8 @@
     android:id="@+id/fragment_settings"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black"
+    android:background="@android:color/transparent"
+
     android:orientation="vertical"
     android:minHeight="400dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -15,8 +16,10 @@
     <LinearLayout
         android:id="@+id/linear_size"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@drawable/screen_background_settings"
         android:orientation="vertical"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,35 +28,22 @@
             android:id="@+id/handle_container"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:background="@android:color/transparent"
-            android:focusable="true"
-            android:clickable="true"
-            android:layout_gravity="center">
-
-        <View
-            android:id="@+id/handle"
-            android:layout_width="100dp"
-            android:layout_height="5dp"
-            android:background="@drawable/handle_shape"
             android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:clickable="true"
+            android:focusable="true">
 
-            android:contentDescription="@string/configuration"
-            android:layout_marginBottom="5dp"/>
+            <View
+                android:id="@+id/handle"
+                android:layout_width="100dp"
+                android:layout_height="5dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+
+                android:background="@drawable/handle_shape"
+                android:contentDescription="@string/configuration" />
 
         </FrameLayout>
-
-        <TextView
-            android:id="@+id/tv_tittle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/default_margin"
-            android:layout_marginTop="@dimen/default_margin"
-            android:layout_marginRight="@dimen/default_margin"
-            android:layout_marginBottom="@dimen/double_margin"
-            android:text="@string/settings"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_elementData"
@@ -66,23 +56,24 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/double_margin">
 
             <com.skydoves.colorpickerview.ColorPickerView
                 android:id="@+id/colorPickerView"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="160dp"
                 android:layout_gravity="center"
 
                 android:layout_marginStart="@dimen/default_margin"
-                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="@dimen/default_margin"
-                android:layout_marginBottom="10dp"
                 android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+            </com.skydoves.colorpickerview.ColorPickerView>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline4"
@@ -92,6 +83,7 @@
                 app:layout_constraintGuide_percent="0.5" />
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:orientation="vertical"
@@ -149,17 +141,35 @@
                     android:min="30"
                     android:progress="1" />
 
-                <Button
-                    android:id="@+id/btn_aply_settings"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:text="@string/apply_changes" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/default_margin"
+                android:text="@string/reset_color" />
+
+            <Button
+                android:id="@+id/btn_aply_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="60dp"
+                android:layout_marginBottom="@dimen/default_margin"
+                android:text="@string/apply_changes" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
