--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="button_text_size">10sp</dimen>
     <dimen name="margin_End">10dp</dimen>
     <dimen name="peek_height">100dp</dimen>
+    <dimen name="triple_margin">30dp</dimen>
 </resources>
